--- a/assets/style/pages/book-details.css
+++ b/assets/style/pages/book-details.css
@@ -2,13 +2,15 @@
     text-align: start;
     background: var(--clr1bg);
     border-radius: 7px;
+    margin:20px;
+   
 }
 .book-details-content h1 {
     font-size: 2rem;
 }
 .book-details-preview {
-        border: 1px solid rgb(202, 202, 202);
-            border-radius: 7px;
-            padding:30px;
-
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 7px;
+    padding:30px;
+margin:20px;
 }
